--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
 
         const VideoShowcaseSection = () => {
             const videos = [
-                { id: 1, src: "https://assets.mixkit.co/videos/preview/mixkit-vertical-shot-of-a-luxury-building-entrance-13658-large.mp4", label: "Luxury & Lifestyle", tag: "VIRAL HOOKS", delay: 0 },
-                { id: 2, src: "https://assets.mixkit.co/videos/preview/mixkit-man-working-out-with-battle-ropes-at-gym-28669-large.mp4", label: "Motivation & Fitness", tag: "HIGH RETENTION", delay: 200 },
-                { id: 3, src: "https://assets.mixkit.co/videos/preview/mixkit-ink-swirling-in-water-1193-large.mp4", label: "Satisfying & VFX", tag: "4K QUALITY", delay: 400 }
+                { id: 1, src: "https://drive.google.com/uc?export=download&id=1J6_-_tSWO_eNziGVY3CuaY-tArMJhTjQ", label: "Luxury & Lifestyle", tag: "VIRAL HOOKS", delay: 0 },
+                { id: 2, src: "https://drive.google.com/uc?export=download&id=1d9OhcESucrzC3p1IiQwO2mqrxxWPYKWu", label: "Motivation & Fitness", tag: "HIGH RETENTION", delay: 200 },
+                { id: 3, src: "https://drive.google.com/uc?export=download&id=1MzPN9szXbKrIOeYJgO7XO5oJ06tClnrP", label: "Satisfying & VFX", tag: "4K QUALITY", delay: 400 }
             ];
             return (
                 <section className="py-20 bg-gray-950 relative overflow-hidden border-t border-gray-900">
