--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
         const VideoShowcaseSection = () => {
             // NOTE: To use your own videos, upload them to WordPress and replace these URLs.
             const videos = [
-                { id: 1, src: "https://raw.githubusercontent.com/digitalassetspro/special-this-month-offer/d57cc0442ccfc686fe14c7e3f0d7547bedec4049/319974431_3169361143361518_6105132591057930893_n.mp4", label: "Luxury & Lifestyle", tag: "VIRAL HOOKS", delay: 0 },
-                { id: 2, src: "https://raw.githubusercontent.com/digitalassetspro/special-this-month-offer/d57cc0442ccfc686fe14c7e3f0d7547bedec4049/317032313_1509589559577716_217053824126591327_n.mp4", label: "Motivation & Fitness", tag: "HIGH RETENTION", delay: 200 },
-                { id: 3, src: "https://raw.githubusercontent.com/digitalassetspro/special-this-month-offer/d57cc0442ccfc686fe14c7e3f0d7547bedec4049/122428032_250139534418831_7481158972881171494_n.mp4", label: "Satisfying & VFX", tag: "4K QUALITY", delay: 400 }
+                { id: 1, src: "https://github.com/digitalassetspro/special-this-month-offer/blob/d57cc0442ccfc686fe14c7e3f0d7547bedec4049/319974431_3169361143361518_6105132591057930893_n.mp4", label: "Luxury & Lifestyle", tag: "VIRAL HOOKS", delay: 0 },
+                { id: 2, src: "https://github.com/digitalassetspro/special-this-month-offer/blob/d57cc0442ccfc686fe14c7e3f0d7547bedec4049/317032313_1509589559577716_217053824126591327_n.mp4", label: "Motivation & Fitness", tag: "HIGH RETENTION", delay: 200 },
+                { id: 3, src: "https://github.com/digitalassetspro/special-this-month-offer/blob/d57cc0442ccfc686fe14c7e3f0d7547bedec4049/122428032_250139534418831_7481158972881171494_n.mp4", label: "Satisfying & VFX", tag: "4K QUALITY", delay: 400 }
             ];
             return (
                 <section className="py-20 bg-gray-950 relative overflow-hidden border-t border-gray-900">
